[package]
name = "Forecast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive", "wrap_help"] }
derive = "1.0.0"
dotenv = { version = "0.15.0", features = ["clap"] }
feature = "0.5.1"
reqwest = { version = "0.11.18", features = ["json", "blocking", "gzip", "deflate"] }
serde = { version = "1.0.183", features = ["derive"] }
